# fred-py-api

./: .gitignore  LICENSE  README.md  fred-py-api.rb  fred.rb  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: fred-py-api-package.yml
api/: __init__.py  category.py  fred_client.py  fred_py_api.py  release.py  series.py
docs/: requirements.txt
docs/source/: api.rst  categories.rst  conf.py  exceptions.rst  index.rst  releases.rst  series.rst  sources.rst  tags.rst
src/fred/_util/: __init__.py  cli.py  decorators.py
src/fred/api/: __init__.py  _fred_client.py  categories.py  exceptions.py  releases.py  series.py  sources.py  tags.py
src/fred/cli/: __init__.py  __main__.py  categories.py  fred.py  releases.py  series.py  sources.py  tags.py
src/fredapi/: __init__.py
src/fredapi/api/: __init__.py  categories.py  category.py  fred_client.py  fred_py_api.py  release.py  releases.py  series.py  sources.py  tags.py
src/fredapi/cli/: __init__.py  categories.py  fred.py  sources.py
src/fredapi/util/: decorators.py
src/fredpy/: __init__.py
src/fredpy/api/: __init__.py  exceptions.py  series.py  sources.py  tags.py
tests/: const.py  test_base_client.py  test_categories.py  test_category.py  test_decorators.py  test_releases.py  test_series.py  test_sources.py  test_tags.py
tests/api/: __init__.py  test_base_client.py  test_categories.py  test_decorators.py  test_releases.py  test_series.py  test_sources.py  test_tags.py
tests/cli/: __init__.py  test_categories_cli.py  test_cli_entry_point.py  test_cli_utils.py  test_generate_kwargs.py  test_releases_cli.py  test_series_cli.py  test_sources_cli.py  test_tags_cli.py
