[build-system]
requires = ["setuptools>=61.0", "requests>=2.17.3",]
build-backend = "setuptools.build_meta"

[project]
name = "fred-py-api"
version = "0.1.4"
authors = [
  { name="Zachary Spar", email="zachspar@gmail.com" },
  { name="Prasiddha Parthsarthy", email="prasiddha@gmail.com" },
]
description = "A fully featured FRED API client library for Python."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.17.3",
]

[project.urls]
"Homepage" = "https://github.com/zachspar/fred_py_api"
"Bug Tracker" = "https://github.com/zachspar/fred_py_api/issues"
