[build-system]
requires = ["setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "fred-py-api"
version = "1.2.0"
authors = [
    { name="Zachary Spar", email="zachspar@gmail.com" },
]
description = "A fully featured FRED Command Line Interface & Python API client library."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.17.3",
    "click>=7.0",
]

[project.optional-dependencies]
ci = [
    "black==22.6.0",
    "coverage==6.4.2",
]
dev = [
    "black==22.6.0",
    "coverage==6.4.2",
    "tox==3.25.1",
    "sphinx==7.2.6"
]

[project.scripts]
fred = "fred.cli:__main__.run_fred_cli"
categories = "fred.cli:categories.run_categories_cli"
releases = "fred.cli:releases.run_releases_cli"
series = "fred.cli:series.run_series_cli"
sources = "fred.cli:sources.run_sources_cli"
tags = "fred.cli:tags.run_tags_cli"

[project.urls]
"Homepage" = "https://github.com/zachspar/fred_py_api"
"Bug Tracker" = "https://github.com/zachspar/fred_py_api/issues"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.black]
line-length = 120
